--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description"
         content="Resúmenes extendidos de temario, recursos y enlaces de utilidad para la preparación de las oposiciones del Cuerpo de Inspectores del SOIVRE e Ingenieros Técnicos del SOIVRE.">
-    <title>Oposiciones SOIVRE - Inspector e Ingeniero Técnico</title>
+    <title>Sergio Argudo - Inicio</title>
+    <link rel="icon" href="images/logo.png?v=2" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +27,7 @@
     <meta property="og:title" content="Sergio Argudo Santiago - Preparación Oposiciones Inspectores del SOIVRE">
     <meta property="og:description"
         content="Preparación integral para el Cuerpo de Inspectores del SOIVRE. Temario, recursos y materiales para Ingenieros Técnicos.">
-    <meta property="og:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+    <meta property="og:image" content="https://sergioargudosantiago.github.io/images/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -34,7 +35,7 @@
     <meta property="twitter:title" content="Sergio Argudo Santiago - Preparación Oposiciones Inspectores del SOIVRE">
     <meta property="twitter:description"
         content="Preparación integral para el Cuerpo de Inspectores del SOIVRE. Temario, recursos y materiales para Ingenieros Técnicos.">
-    <meta property="twitter:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+    <meta property="twitter:image" content="https://sergioargudosantiago.github.io/images/logo.png">
 
     <!-- Google Analytics (GA4) -->
     <!-- Replace G-XXXXXXXXXX with your Deployment ID -->
@@ -1188,6 +1189,9 @@
             }
         });
     </script>
+    <!-- Main JavaScript -->
+    <script src="js/main.js"></script>
+    <script src="js/cookies.js?v=1"></script>
 </body>
 
 </html>
