--- a/temario.html
+++ b/temario.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description"
         content="Resúmenes extendidos de temario, recursos y enlaces de utilidad para la preparación de las oposiciones del Cuerpo de Inspectores del SOIVRE e Ingenieros Técnicos del SOIVRE.">
-    <title>Temario - Oposiciones SOIVRE</title>
+    <title>Sergio Argudo - Temario</title>
+    <link rel="icon" href="images/logo.png?v=2" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,16 +26,16 @@
     <meta property="og:url" content="https://sergioargudosantiago.github.io/temario.html">
     <meta property="og:title" content="Temario - Sergio Argudo Santiago | Preparación Oposiciones SOIVRE">
     <meta property="og:description"
-        content="Accede a resúmenes extendidos del temario para Inspectores e Ingenieros Técnicos del SOIVRE. Temas de Comercio Exterior, Economía y UE.">
-    <meta property="og:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+        content="Temario completo y resumido para Oposiciones SOIVRE. Esquemas descargables en Word y PDF.">
+    <meta property="og:image" content="https://sergioargudosantiago.github.io/images/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sergioargudosantiago.github.io/temario.html">
-    <meta property="twitter:title" content="Temario - Sergio Argudo Santiago | Preparación Oposiciones SOIVRE">
+    <meta property="twitter:title" content="Temario Oposiciones SOIVRE - Resúmenes y Esquemas">
     <meta property="twitter:description"
-        content="Accede a resúmenes extendidos del temario para Inspectores e Ingenieros Técnicos del SOIVRE.">
-    <meta property="twitter:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+        content="Temario completo y resumido para Oposiciones SOIVRE. Esquemas descargables en Word y PDF.">
+    <meta property="twitter:image" content="https://sergioargudosantiago.github.io/images/logo.png">
 
     <!-- Google Analytics (GA4) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
@@ -770,6 +771,7 @@
 
     <!-- Main JavaScript -->
     <script src="js/main.js"></script>
+    <script src="js/cookies.js?v=1"></script>
 </body>
 
 </html>
