--- a/enlaces.html
+++ b/enlaces.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description"
         content="Enlaces y recursos de utilidad para la preparación de las oposiciones del Cuerpo de Inspectores del SOIVRE e Ingenieros Técnicos del SOIVRE.">
-    <title>Enlaces de Interés - Oposiciones SOIVRE</title>
+    <title>Sergio Argudo - Enlaces</title>
+    <link rel="icon" href="images/logo.png?v=2" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,16 +26,16 @@
     <meta property="og:url" content="https://sergioargudosantiago.github.io/enlaces.html">
     <meta property="og:title" content="Enlaces de Interés - Sergio Argudo Santiago | Recursos SOIVRE">
     <meta property="og:description"
-        content="Recopilación de enlaces útiles para la preparación de oposiciones SOIVRE: Organismos internacionales, normativas y estadísticas.">
-    <meta property="og:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+        content="Recopilación de enlaces oficiales y recursos de interés para opositores al SOIVRE.">
+    <meta property="og:image" content="https://sergioargudosantiago.github.io/images/logo.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sergioargudosantiago.github.io/enlaces.html">
-    <meta property="twitter:title" content="Enlaces de Interés - Sergio Argudo Santiago | Recursos SOIVRE">
+    <meta property="twitter:title" content="Enlaces de Interés - Oposiciones SOIVRE">
     <meta property="twitter:description"
-        content="Recopilación de enlaces útiles para la preparación de oposiciones SOIVRE: Organismos internacionales, normativas y estadísticas.">
-    <meta property="twitter:image" content="https://sergioargudosantiago.github.io/images/og-default.jpg">
+        content="Recopilación de enlaces oficiales y recursos de interés para opositores al SOIVRE.">
+    <meta property="twitter:image" content="https://sergioargudosantiago.github.io/images/logo.png">
 
     <!-- Google Analytics (GA4) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
@@ -761,6 +762,7 @@
 
     <!-- Main JavaScript -->
     <script src="js/main.js"></script>
+    <script src="js/cookies.js?v=1"></script>
 </body>
 
 </html>
