--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -450,9 +450,9 @@
 
                     <div class="grid grid-cols-1 lg:grid-cols-12 gap-8 lg:gap-12 items-start">
                         <!-- Left Column: Photo & Titles (Aligned Top-Left) -->
-                        <div class="lg:col-span-5 flex flex-col items-start text-left">
+                        <div class="lg:col-span-5 flex flex-col items-center text-center lg:items-start lg:text-left">
                             <!-- Photo Container -->
-                            <div class="relative w-32 h-32 md:w-40 md:h-40 mb-6 group -ml-2 -mt-2">
+                            <div class="relative w-32 h-32 md:w-40 md:h-40 mb-6 group lg:-ml-2 -mt-2">
                                 <div
                                     class="absolute inset-0 bg-gradient-to-tr from-primary to-accent rounded-full blur-xl opacity-30 group-hover:opacity-50 transition-opacity duration-500">
                                 </div>
@@ -469,7 +469,7 @@
                                 Sergio Argudo Santiago
                             </h1>
 
-                            <div class="w-24 h-1.5 bg-accent rounded-full mb-6 mx-0"></div>
+                            <div class="w-24 h-1.5 bg-accent rounded-full mb-6 mx-auto lg:mx-0"></div>
 
                             <div class="space-y-3 text-foreground/80">
                                 <p class="text-xl md:text-2xl font-bold text-foreground">
