--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -464,8 +464,7 @@
                                 </div>
                             </div>
 
-                            <h1
-                                class="text-3xl sm:text-4xl font-extrabold tracking-tight text-primary mb-4 whitespace-nowrap w-full">
+                            <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-primary mb-4 w-full">
                                 Sergio Argudo Santiago
                             </h1>
 
