--- a/index.html
+++ b/index.html
@@ -120,6 +120,33 @@
             --radius: 0.5rem;
         }
 
+        /* ===== DARK THEME ===== */
+        html.dark {
+            --background: 222 47% 11%;
+            --foreground: 210 40% 80%;
+            --card: 222 47% 14%;
+            --card-foreground: 210 40% 90%;
+            --popover: 222 47% 14%;
+            --popover-foreground: 210 40% 90%;
+            --primary: 210 100% 60%;
+            --primary-foreground: 222 47% 8%;
+            --secondary: 222 47% 16%;
+            --secondary-foreground: 210 40% 90%;
+            --muted: 222 47% 18%;
+            --muted-foreground: 210 20% 60%;
+            --accent: 210 100% 60%;
+            --accent-foreground: 222 47% 8%;
+            --destructive: 0 84% 60%;
+            --destructive-foreground: 0 0% 98%;
+            --border: 222 30% 22%;
+            --input: 222 30% 22%;
+            --ring: 210 100% 60%;
+        }
+
+        html {
+            transition: color 0.3s, background-color 0.3s;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -133,9 +160,11 @@
             min-height: 100vh;
             color: hsl(var(--foreground));
             padding-bottom: 5rem;
-            /* Space for sticky footer */
         }
 
+        html.dark body {
+            background: linear-gradient(to bottom, hsl(222, 47%, 11%), hsl(222, 47%, 8%));
+        }
 
         .font-serif {
             font-family: 'Cambria', 'Noto Serif', serif;
@@ -152,6 +181,162 @@
             background-color: #f5f6f7;
             background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
             background-size: 24px 24px;
+        }
+
+        html.dark .container-illustration {
+            background-color: hsl(222, 47%, 11%);
+            background-image: radial-gradient(circle, hsl(222, 30%, 22%) 1px, transparent 1px);
+        }
+
+        /* Dark mode overrides for glass elements */
+        html.dark .nav-island {
+            background: rgba(30, 41, 59, 0.85);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .nav-segment {
+            color: hsl(var(--foreground));
+        }
+
+        html.dark .nav-segment:hover {
+            color: hsl(var(--primary));
+            background: rgba(59, 130, 246, 0.15);
+        }
+
+        html.dark .nav-segment.active {
+            color: hsl(var(--primary));
+            background: rgba(59, 130, 246, 0.2);
+            border-color: rgba(59, 130, 246, 0.4);
+        }
+
+        html.dark .search-island input {
+            background: rgba(255, 255, 255, 0.08);
+            border-color: rgba(255, 255, 255, 0.12);
+            color: hsl(var(--foreground));
+        }
+
+        html.dark footer {
+            background: hsl(222, 47%, 8%) !important;
+        }
+
+        /* Dark mode: Intro carousel & tabs */
+        html.dark .bg-white\/90 {
+            background: rgba(30, 41, 59, 0.9) !important;
+        }
+
+        html.dark .bg-white\/75 {
+            background: rgba(30, 41, 59, 0.75) !important;
+        }
+
+        html.dark .bg-white\/80 {
+            background: rgba(30, 41, 59, 0.8) !important;
+        }
+
+        html.dark .ring-black\/5 {
+            --tw-ring-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .text-gray-600 {
+            color: hsl(210 20% 60%) !important;
+        }
+
+        html.dark .hover\:bg-gray-100:hover {
+            background: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .text-foreground {
+            color: hsl(var(--card-foreground)) !important;
+        }
+
+        html.dark .border-white\/30 {
+            border-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .border-white\/40 {
+            border-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .text-foreground\/80 {
+            color: hsl(210 40% 85%) !important;
+        }
+
+        html.dark .text-foreground\/90 {
+            color: hsl(210 40% 90%) !important;
+        }
+
+        /* Mobile menu + hamburger button */
+        html.dark .bg-white\/95 {
+            background: rgba(15, 23, 42, 0.97) !important;
+        }
+
+        html.dark [class*="bg-white/80"] {
+            background: rgba(30, 41, 59, 0.85) !important;
+        }
+
+        /* ===== SCROLL REVEAL ===== */
+        [data-reveal] {
+            opacity: 0;
+            transform: translateY(24px);
+            transition: opacity 0.7s cubic-bezier(0.4, 0, 0.2, 1), transform 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        [data-reveal].revealed {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* ===== MOBILE BREADCRUMB ===== */
+        .mobile-breadcrumb {
+            position: fixed;
+            top: 1rem;
+            left: 1rem;
+            z-index: 40;
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            padding: 0.4rem 0.85rem;
+            background: rgba(255, 255, 255, 0.85);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            border-radius: 9999px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.06);
+            font-size: 0.7rem;
+            font-weight: 700;
+            letter-spacing: 0.06em;
+            color: hsl(var(--primary));
+            text-transform: uppercase;
+        }
+
+        html.dark .mobile-breadcrumb {
+            background: rgba(30, 41, 59, 0.9);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        @media (min-width: 768px) {
+            .mobile-breadcrumb {
+                display: none;
+            }
+        }
+
+        /* ===== THEME TOGGLE ===== */
+        .theme-toggle {
+            padding: 0.5rem;
+            border-radius: 9999px;
+            background: transparent;
+            border: 1px solid transparent;
+            cursor: pointer;
+            color: hsl(var(--foreground) / 0.7);
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .theme-toggle:hover {
+            color: hsl(var(--primary));
+            background: rgba(255, 255, 255, 0.15);
+            border-color: rgba(6, 132, 212, 0.2);
         }
 
         /* Mobile menu styles */
@@ -835,6 +1020,15 @@
     <!-- Background Illustration -->
     <div class="container-illustration"></div>
 
+    <!-- Mobile Breadcrumb -->
+    <div class="mobile-breadcrumb md:hidden">
+        <svg width="14" height="14" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-4 0a1 1 0 01-1-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 01-1 1h-2z" />
+        </svg>
+        Introducción
+    </div>
+
     <!-- Illuminated Island Navigation (Desktop) -->
     <nav class="nav-island hidden md:flex">
         <a href="index.html" class="nav-segment active">INTRODUCCIÓN</a>
@@ -842,6 +1036,20 @@
         <a href="comercio-exterior.html" class="nav-segment">COMERCIO EXTERIOR</a>
         <a href="enlaces.html" class="nav-segment">ENLACES</a>
         <a href="sobre-mi.html" class="nav-segment">SOBRE MÍ</a>
+
+        <!-- Theme Toggle -->
+        <button onclick="toggleTheme()" class="theme-toggle" aria-label="Cambiar tema" title="Modo oscuro/claro">
+            <svg class="theme-icon-sun" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <circle cx="12" cy="12" r="5" stroke-width="2" />
+                <path stroke-linecap="round" stroke-width="2"
+                    d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" />
+            </svg>
+            <svg class="theme-icon-moon" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                style="display:none">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" />
+            </svg>
+        </button>
 
         <div class="search-island">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -927,8 +1135,8 @@
                 </div>
 
                 <!-- Carousel Container with Glassmorphism Card -->
-                <div
-                    class="relative w-full max-w-5xl mx-auto min-h-[500px] bg-white/75 backdrop-blur-md border border-white/30 rounded-3xl shadow-2xl p-8 md:p-12 flex items-center justify-center overflow-hidden">
+                <div data-reveal
+                    class="relative w-full max-w-5xl mx-auto min-h-[500px] bg-white/75 dark:bg-slate-800/75 backdrop-blur-md border border-white/30 dark:border-slate-700/30 rounded-3xl shadow-2xl p-8 md:p-12 flex items-center justify-center overflow-hidden">
                     <!-- Carousel Slides -->
                     <div id="carouselSlides" class="relative w-full h-full flex items-center justify-center">
                         <!-- Slide 1: Intro -->
@@ -1189,8 +1397,6 @@
             }
         });
     </script>
-    <!-- Main JavaScript -->
-    <script src="js/main.js"></script>
     <script src="js/cookies.js?v=1"></script>
 </body>
 
