--- a/comercio-exterior.html
+++ b/comercio-exterior.html
@@ -115,6 +115,33 @@
             --radius: 0.5rem;
         }
 
+        /* ===== DARK THEME ===== */
+        html.dark {
+            --background: 222 47% 11%;
+            --foreground: 210 40% 80%;
+            --card: 222 47% 14%;
+            --card-foreground: 210 40% 90%;
+            --popover: 222 47% 14%;
+            --popover-foreground: 210 40% 90%;
+            --primary: 210 100% 60%;
+            --primary-foreground: 222 47% 8%;
+            --secondary: 222 47% 16%;
+            --secondary-foreground: 210 40% 90%;
+            --muted: 222 47% 18%;
+            --muted-foreground: 210 20% 60%;
+            --accent: 210 100% 60%;
+            --accent-foreground: 222 47% 8%;
+            --destructive: 0 84% 60%;
+            --destructive-foreground: 0 0% 98%;
+            --border: 222 30% 22%;
+            --input: 222 30% 22%;
+            --ring: 210 100% 60%;
+        }
+
+        html {
+            transition: color 0.3s, background-color 0.3s;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -128,7 +155,10 @@
             min-height: 100vh;
             color: hsl(var(--foreground));
             padding-bottom: 5rem;
-            /* Space for sticky footer */
+        }
+
+        html.dark body {
+            background: linear-gradient(to bottom, hsl(222, 47%, 11%), hsl(222, 47%, 8%));
         }
 
         html {
@@ -150,6 +180,233 @@
             background-color: #f5f6f7;
             background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
             background-size: 24px 24px;
+        }
+
+        html.dark .container-illustration {
+            background-color: hsl(222, 47%, 11%);
+            background-image: radial-gradient(circle, hsl(222, 30%, 22%) 1px, transparent 1px);
+        }
+
+        /* Dark mode overrides */
+        html.dark .nav-island {
+            background: rgba(30, 41, 59, 0.85);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .nav-segment {
+            color: hsl(var(--foreground));
+        }
+
+        html.dark .nav-segment:hover {
+            color: hsl(var(--primary));
+            background: rgba(59, 130, 246, 0.15);
+        }
+
+        html.dark .nav-segment.active {
+            color: hsl(var(--primary));
+            background: rgba(59, 130, 246, 0.2);
+            border-color: rgba(59, 130, 246, 0.4);
+        }
+
+        html.dark .search-island input {
+            background: rgba(255, 255, 255, 0.08);
+            border-color: rgba(255, 255, 255, 0.12);
+            color: hsl(var(--foreground));
+        }
+
+        html.dark .glass-card {
+            background: rgba(30, 41, 59, 0.8);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .sector-card {
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .sector-card:hover {
+            border-color: rgba(59, 130, 246, 0.4);
+        }
+
+        html.dark .bp-kpi-card {
+            background: rgba(30, 41, 59, 0.7);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .bp-chart-card {
+            background: rgba(30, 41, 59, 0.7);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .flow-toggle {
+            background: rgba(30, 41, 59, 0.5);
+        }
+
+        html.dark .main-tab-toggle {
+            background: rgba(30, 41, 59, 0.5);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .bp-sub-tabs {
+            background: rgba(30, 41, 59, 0.5);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .bp-sub-tab.active {
+            background: rgba(59, 130, 246, 0.2);
+            color: hsl(var(--primary));
+        }
+
+        /* Dark mode: Content cards & text */
+        html.dark .bg-white\/75 {
+            background: rgba(30, 41, 59, 0.75) !important;
+        }
+
+        html.dark .bg-white\/80 {
+            background: rgba(30, 41, 59, 0.8) !important;
+        }
+
+        html.dark .border-white\/30 {
+            border-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .border-white\/40 {
+            border-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .text-foreground {
+            color: hsl(var(--card-foreground)) !important;
+        }
+
+        html.dark .text-foreground\/80 {
+            color: hsl(210 40% 85%) !important;
+        }
+
+        html.dark [class*="bg-white/80"] {
+            background: rgba(30, 41, 59, 0.85) !important;
+        }
+
+        html.dark .bg-white\/95 {
+            background: rgba(15, 23, 42, 0.97) !important;
+        }
+
+        html.dark footer {
+            background: hsl(222, 47%, 8%) !important;
+        }
+
+        /* ===== SCROLL REVEAL ===== */
+        [data-reveal] {
+            opacity: 0;
+            transform: translateY(24px);
+            transition: opacity 0.7s cubic-bezier(0.4, 0, 0.2, 1), transform 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        [data-reveal].revealed {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* ===== MOBILE BREADCRUMB ===== */
+        .mobile-breadcrumb {
+            position: fixed;
+            top: 1rem;
+            left: 1rem;
+            z-index: 40;
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            padding: 0.4rem 0.85rem;
+            background: rgba(255, 255, 255, 0.85);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            border-radius: 9999px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.06);
+            font-size: 0.7rem;
+            font-weight: 700;
+            letter-spacing: 0.06em;
+            color: hsl(var(--primary));
+            text-transform: uppercase;
+        }
+
+        html.dark .mobile-breadcrumb {
+            background: rgba(30, 41, 59, 0.9);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        @media (min-width: 768px) {
+            .mobile-breadcrumb {
+                display: none;
+            }
+        }
+
+        /* ===== THEME TOGGLE ===== */
+        .theme-toggle {
+            padding: 0.5rem;
+            border-radius: 9999px;
+            background: transparent;
+            border: 1px solid transparent;
+            cursor: pointer;
+            color: hsl(var(--foreground) / 0.7);
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .theme-toggle:hover {
+            color: hsl(var(--primary));
+            background: rgba(255, 255, 255, 0.15);
+            border-color: rgba(6, 132, 212, 0.2);
+        }
+
+        /* ===== SKELETON LOADING ===== */
+        .skeleton-loader {
+            position: relative;
+            overflow: hidden;
+            border-radius: 1rem;
+            background: rgba(255, 255, 255, 0.5);
+            transition: opacity 0.3s;
+        }
+
+        html.dark .skeleton-loader {
+            background: rgba(30, 41, 59, 0.5);
+        }
+
+        .skeleton-loader::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+            animation: shimmer 1.5s infinite;
+        }
+
+        html.dark .skeleton-loader::after {
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.06), transparent);
+        }
+
+        @keyframes shimmer {
+            0% {
+                transform: translateX(-100%);
+            }
+
+            100% {
+                transform: translateX(100%);
+            }
+        }
+
+        .skeleton-bar {
+            height: 1.5rem;
+            border-radius: 0.5rem;
+            background: hsl(var(--muted));
+            margin-bottom: 0.75rem;
+        }
+
+        .skeleton-bar:nth-child(2) {
+            width: 75%;
+        }
+
+        .skeleton-bar:nth-child(3) {
+            width: 50%;
         }
 
         /* ========== GLASSMORPHISM ========== */
@@ -657,6 +914,15 @@
     <!-- Background Illustration -->
     <div class="container-illustration"></div>
 
+    <!-- Mobile Breadcrumb -->
+    <div class="mobile-breadcrumb md:hidden">
+        <svg width="14" height="14" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+        </svg>
+        Comercio Exterior
+    </div>
+
     <!-- Desktop Navigation -->
     <nav class="nav-island hidden md:flex">
         <a href="index.html" class="nav-segment">INTRODUCCIÓN</a>
@@ -664,6 +930,20 @@
         <a href="comercio-exterior.html" class="nav-segment active">COMERCIO EXTERIOR</a>
         <a href="enlaces.html" class="nav-segment">ENLACES</a>
         <a href="sobre-mi.html" class="nav-segment">SOBRE MÍ</a>
+
+        <!-- Theme Toggle -->
+        <button onclick="toggleTheme()" class="theme-toggle" aria-label="Cambiar tema" title="Modo oscuro/claro">
+            <svg class="theme-icon-sun" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <circle cx="12" cy="12" r="5" stroke-width="2" />
+                <path stroke-linecap="round" stroke-width="2"
+                    d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" />
+            </svg>
+            <svg class="theme-icon-moon" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                style="display:none">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" />
+            </svg>
+        </button>
 
         <div class="search-island">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -779,12 +1059,24 @@
                             </div>
 
                             <!-- Macro Sector Selection -->
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-8" data-reveal>
                                 <div class="glass-card sector-card" onclick="selectMacroSector('Agroalimentario')">
                                     <h3>AGROALIMENTARIO</h3>
+                                    <!-- Skeleton -->
+                                    <div class="skeleton-loader mt-4 p-4">
+                                        <div class="skeleton-bar"></div>
+                                        <div class="skeleton-bar"></div>
+                                        <div class="skeleton-bar"></div>
+                                    </div>
                                 </div>
                                 <div class="glass-card sector-card" onclick="selectMacroSector('Industrial')">
                                     <h3>INDUSTRIAL</h3>
+                                    <!-- Skeleton -->
+                                    <div class="skeleton-loader mt-4 p-4">
+                                        <div class="skeleton-bar"></div>
+                                        <div class="skeleton-bar"></div>
+                                        <div class="skeleton-bar"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
