--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -118,6 +118,32 @@
             --radius: 0.5rem;
         }
 
+        /* ===== DARK THEME ===== */
+        html.dark {
+            --background: 222 47% 11%;
+            --foreground: 210 40% 80%;
+            --card: 222 47% 14%;
+            --card-foreground: 210 40% 90%;
+            --popover: 222 47% 14%;
+            --popover-foreground: 210 40% 90%;
+            --primary: 210 100% 60%;
+            --primary-foreground: 222 47% 8%;
+            --secondary: 222 47% 16%;
+            --secondary-foreground: 210 40% 90%;
+            --muted: 222 47% 18%;
+            --muted-foreground: 210 20% 60%;
+            --accent: 210 100% 60%;
+            --accent-foreground: 222 47% 8%;
+            --destructive: 0 84% 60%;
+            --destructive-foreground: 0 0% 98%;
+            --border: 222 30% 22%;
+            --input: 222 30% 22%;
+            --ring: 210 100% 60%;
+        }
+
+        html {
+            transition: color 0.3s, background-color 0.3s;
+        }
 
         * {
             margin: 0;
@@ -133,6 +159,10 @@
             color: hsl(var(--foreground));
             padding-bottom: 5rem;
             /* Space for sticky footer */
+        }
+
+        html.dark body {
+            background: linear-gradient(to bottom, hsl(222, 47%, 11%), hsl(222, 47%, 8%));
         }
 
         html {
@@ -154,6 +184,173 @@
             background-color: #f5f6f7;
             background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
             background-size: 24px 24px;
+        }
+
+        html.dark .container-illustration {
+            background-color: hsl(222, 47%, 11%);
+            background-image: radial-gradient(circle, hsl(222, 30%, 22%) 1px, transparent 1px);
+        }
+
+        /* Dark mode overrides */
+        html.dark .nav-island {
+            background: rgba(30, 41, 59, 0.85);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark .nav-segment {
+            color: hsl(var(--foreground));
+        }
+
+        html.dark .nav-segment:hover {
+            color: hsl(var(--primary));
+            background: rgba(59, 130, 246, 0.15);
+        }
+
+        html.dark .nav-segment.active {
+            color: hsl(var(--primary));
+            background: rgba(59, 130, 246, 0.2);
+            border-color: rgba(59, 130, 246, 0.4);
+        }
+
+        html.dark .search-island input {
+            background: rgba(255, 255, 255, 0.08);
+            border-color: rgba(255, 255, 255, 0.12);
+            color: hsl(var(--foreground));
+        }
+
+        html.dark .glass-card {
+            background: rgba(30, 41, 59, 0.8);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        html.dark footer {
+            background: hsl(222, 47%, 8%) !important;
+        }
+
+        /* Dark mode: Content cards & text */
+        html.dark .bg-white\/80 {
+            background: rgba(30, 41, 59, 0.8) !important;
+        }
+
+        html.dark .bg-white\/60 {
+            background: rgba(30, 41, 59, 0.6) !important;
+        }
+
+        html.dark .border-white\/50 {
+            border-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .border-white\/30 {
+            border-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .border-white\/40 {
+            border-color: rgba(255, 255, 255, 0.08) !important;
+        }
+
+        html.dark .text-foreground {
+            color: hsl(var(--card-foreground)) !important;
+        }
+
+        html.dark .text-foreground\/80 {
+            color: hsl(210 40% 85%) !important;
+        }
+
+        html.dark .text-foreground\/90 {
+            color: hsl(210 40% 90%) !important;
+        }
+
+        /* CTA section */
+        html.dark .bg-blue-50\/50 {
+            background: rgba(30, 58, 95, 0.35) !important;
+        }
+
+        html.dark .border-blue-100 {
+            border-color: rgba(59, 130, 246, 0.2) !important;
+        }
+
+        /* Photo border - keep ring dark, but KEEP photo fill white */
+        html.dark .border-white {
+            border-color: rgba(30, 41, 59, 1) !important;
+        }
+
+        html.dark .bg-white:not(.rounded-full) {
+            background: rgba(30, 41, 59, 1) !important;
+        }
+
+        /* Mobile elements */
+        html.dark [class*="bg-white/80"] {
+            background: rgba(30, 41, 59, 0.85) !important;
+        }
+
+        html.dark .bg-white\/95 {
+            background: rgba(15, 23, 42, 0.97) !important;
+        }
+
+        /* ===== SCROLL REVEAL ===== */
+        [data-reveal] {
+            opacity: 0;
+            transform: translateY(24px);
+            transition: opacity 0.7s cubic-bezier(0.4, 0, 0.2, 1), transform 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        [data-reveal].revealed {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* ===== MOBILE BREADCRUMB ===== */
+        .mobile-breadcrumb {
+            position: fixed;
+            top: 1rem;
+            left: 1rem;
+            z-index: 40;
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            padding: 0.4rem 0.85rem;
+            background: rgba(255, 255, 255, 0.85);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            border-radius: 9999px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.06);
+            font-size: 0.7rem;
+            font-weight: 700;
+            letter-spacing: 0.06em;
+            color: hsl(var(--primary));
+            text-transform: uppercase;
+        }
+
+        html.dark .mobile-breadcrumb {
+            background: rgba(30, 41, 59, 0.9);
+            border-color: rgba(255, 255, 255, 0.08);
+        }
+
+        @media (min-width: 768px) {
+            .mobile-breadcrumb {
+                display: none;
+            }
+        }
+
+        /* ===== THEME TOGGLE ===== */
+        .theme-toggle {
+            padding: 0.5rem;
+            border-radius: 9999px;
+            background: transparent;
+            border: 1px solid transparent;
+            cursor: pointer;
+            color: hsl(var(--foreground) / 0.7);
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .theme-toggle:hover {
+            color: hsl(var(--primary));
+            background: rgba(255, 255, 255, 0.15);
+            border-color: rgba(6, 132, 212, 0.2);
         }
 
         /* Mobile menu styles */
@@ -323,49 +520,20 @@
             }
         }
     </style>
-
-    <!-- Tailwind Config -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        background: 'hsl(var(--background))',
-                        foreground: 'hsl(var(--foreground))',
-                        primary: {
-                            DEFAULT: 'hsl(var(--primary))',
-                            foreground: 'hsl(var(--primary-foreground))',
-                        },
-                        secondary: {
-                            DEFAULT: 'hsl(var(--secondary))',
-                            foreground: 'hsl(var(--secondary-foreground))',
-                        },
-                        muted: {
-                            DEFAULT: 'hsl(var(--muted))',
-                            foreground: 'hsl(var(--muted-foreground))',
-                        },
-                        accent: {
-                            DEFAULT: 'hsl(var(--accent))',
-                            foreground: 'hsl(var(--accent-foreground))',
-                        },
-                        border: 'hsl(var(--border))',
-                        input: 'hsl(var(--input))',
-                        ring: 'hsl(var(--ring))',
-                    },
-                    borderRadius: {
-                        lg: 'var(--radius)',
-                        md: 'calc(var(--radius) - 2px)',
-                        sm: 'calc(var(--radius) - 4px)',
-                    },
-                }
-            }
-        }
-    </script>
 </head>
 
 <body class="flex min-h-screen flex-col">
     <!-- Background Illustration -->
     <div class="container-illustration"></div>
+
+    <!-- Mobile Breadcrumb -->
+    <div class="mobile-breadcrumb md:hidden">
+        <svg width="14" height="14" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+        </svg>
+        Sobre Mí
+    </div>
 
     <!-- Illuminated Island Navigation (Desktop) -->
     <nav class="nav-island hidden md:flex">
@@ -374,6 +542,20 @@
         <a href="comercio-exterior.html" class="nav-segment">COMERCIO EXTERIOR</a>
         <a href="enlaces.html" class="nav-segment">ENLACES</a>
         <a href="sobre-mi.html" class="nav-segment active">SOBRE MÍ</a>
+
+        <!-- Theme Toggle -->
+        <button onclick="toggleTheme()" class="theme-toggle" aria-label="Cambiar tema" title="Modo oscuro/claro">
+            <svg class="theme-icon-sun" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <circle cx="12" cy="12" r="5" stroke-width="2" />
+                <path stroke-linecap="round" stroke-width="2"
+                    d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" />
+            </svg>
+            <svg class="theme-icon-moon" width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                style="display:none">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" />
+            </svg>
+        </button>
 
         <div class="search-island">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
