--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
         }
 
         html.dark footer {
-            background: hsl(222, 47%, 8%) !important;
+            background: hsl(222, 47%, 11%) !important;
+            color: hsl(210 40% 90%) !important;
+            border-color: rgba(255, 255, 255, 0.08) !important;
         }
 
         /* Dark mode: Intro carousel & tabs */
